<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_name"
            android:textStyle="bold"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activity_main_name_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_name_hint"
            android:layout_marginBottom="20dp"
    />

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_phone"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
    />

    <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/activity_main_phone_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_main_phone_hint"
            android:layout_marginBottom="20dp"
    />

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activity_mane_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_save"
    />

</androidx.appcompat.widget.LinearLayoutCompat>
